src/styles/Contact.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.main2 {
  overflow:hidden;
  max-height: 35vh;
  max-width: 100vw;
  display: grid;
  place-items: center;
}
.slider{
  height: 250px;
  margin: auto;
  position: relative;
  width: 90%;
  display: grid;
  place-items: center;
}

.social-icon {
  color:white;
  max-width: 100px;
}

.slide-track{
  display: flex;
  width: calc(250px*18);
  animation: scroll 20s linear infinite;
}
.slide-track:hover{
  animation-play-state: paused;
}
@keyframes scroll{
  0%{
    transform: translate(0);
  }
  100%{
    transform: translateX(calc(-250px * 9));
  }
}
.slide{
  height: 00px;
  width: 250px;
  display: flex;
  align-items: center;
  padding: 0px;
  perspective: 100px;
}

svg:hover{
  transform: translateZ(20px);
}
/* GRADIENT SHADOWS */
.slider::before,
.slider::after{
  background-color: linear-gradient(to right, rgba(255,255,255,1) 0%,
  rgba(255,255,255,0) 100%);
  content: '';
  height: 100%;
  position: absolute;
  width: 15%;
  z-index: 2;
}
.slider::before{
  left: 0;
  top: 0;
}
.slider::after{
  right: 0;
  top: 0;
  transform: rotateZ(180deg);
}

@media (max-width:768px){

}
@media (max-width:480px){

}

